--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function f() {
 
 		<div id="jb-SearchLayout">
 			<input type="text"  size="25" class="searchTBox" id="search-box">
-			<button onclick="f()" class="searchButton">Serch</button>
+			<button onclick="f()" class="searchButton">Search</button>
 		</div>
 		<div id="search-result"></div>
 	</body>
